[package]
name = "diesel_postgis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "1.4", features = ["postgres"] }
dotenv = "0.15.0"
geojson = { version = '0.22', features = ["geo-types"] }
postgis = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "diesel_postgis"
path = "src/lib.rs"

[[bin]]
name = "diesel_postgis_web"
path = "src/main.rs"
